ufl/2022.2.0/_sources/api-doc/ufl.rst.txt
ufl package
===========

Subpackages
-----------

.. toctree::
   :maxdepth: 4

   ufl.algorithms
   ufl.core
   ufl.corealg
   ufl.finiteelement
   ufl.formatting
   ufl.utils

Submodules
----------

ufl.algebra module
------------------

.. automodule:: ufl.algebra
   :members:
   :undoc-members:
   :show-inheritance:

ufl.argument module
-------------------

.. automodule:: ufl.argument
   :members:
   :undoc-members:
   :show-inheritance:

ufl.assertions module
---------------------

.. automodule:: ufl.assertions
   :members:
   :undoc-members:
   :show-inheritance:

ufl.averaging module
--------------------

.. automodule:: ufl.averaging
   :members:
   :undoc-members:
   :show-inheritance:

ufl.cell module
---------------

.. automodule:: ufl.cell
   :members:
   :undoc-members:
   :show-inheritance:

ufl.checks module
-----------------

.. automodule:: ufl.checks
   :members:
   :undoc-members:
   :show-inheritance:

ufl.classes module
------------------

.. automodule:: ufl.classes
   :members:
   :undoc-members:
   :show-inheritance:

ufl.coefficient module
----------------------

.. automodule:: ufl.coefficient
   :members:
   :undoc-members:
   :show-inheritance:

ufl.compound\_expressions module
--------------------------------

.. automodule:: ufl.compound_expressions
   :members:
   :undoc-members:
   :show-inheritance:

ufl.conditional module
----------------------

.. automodule:: ufl.conditional
   :members:
   :undoc-members:
   :show-inheritance:

ufl.constant module
-------------------

.. automodule:: ufl.constant
   :members:
   :undoc-members:
   :show-inheritance:

ufl.constantvalue module
------------------------

.. automodule:: ufl.constantvalue
   :members:
   :undoc-members:
   :show-inheritance:

ufl.differentiation module
--------------------------

.. automodule:: ufl.differentiation
   :members:
   :undoc-members:
   :show-inheritance:

ufl.domain module
-----------------

.. automodule:: ufl.domain
   :members:
   :undoc-members:
   :show-inheritance:

ufl.equation module
-------------------

.. automodule:: ufl.equation
   :members:
   :undoc-members:
   :show-inheritance:

ufl.exprcontainers module
-------------------------

.. automodule:: ufl.exprcontainers
   :members:
   :undoc-members:
   :show-inheritance:

ufl.exprequals module
---------------------

.. automodule:: ufl.exprequals
   :members:
   :undoc-members:
   :show-inheritance:

ufl.exproperators module
------------------------

.. automodule:: ufl.exproperators
   :members:
   :undoc-members:
   :show-inheritance:

ufl.form module
---------------

.. automodule:: ufl.form
   :members:
   :undoc-members:
   :show-inheritance:

ufl.formoperators module
------------------------

.. automodule:: ufl.formoperators
   :members:
   :undoc-members:
   :show-inheritance:

ufl.functionspace module
------------------------

.. automodule:: ufl.functionspace
   :members:
   :undoc-members:
   :show-inheritance:

ufl.geometry module
-------------------

.. automodule:: ufl.geometry
   :members:
   :undoc-members:
   :show-inheritance:

ufl.index\_combination\_utils module
------------------------------------

.. automodule:: ufl.index_combination_utils
   :members:
   :undoc-members:
   :show-inheritance:

ufl.indexed module
------------------

.. automodule:: ufl.indexed
   :members:
   :undoc-members:
   :show-inheritance:

ufl.indexsum module
-------------------

.. automodule:: ufl.indexsum
   :members:
   :undoc-members:
   :show-inheritance:

ufl.integral module
-------------------

.. automodule:: ufl.integral
   :members:
   :undoc-members:
   :show-inheritance:

ufl.log module
--------------

.. automodule:: ufl.log
   :members:
   :undoc-members:
   :show-inheritance:

ufl.mathfunctions module
------------------------

.. automodule:: ufl.mathfunctions
   :members:
   :undoc-members:
   :show-inheritance:

ufl.measure module
------------------

.. automodule:: ufl.measure
   :members:
   :undoc-members:
   :show-inheritance:

ufl.measureoperators module
---------------------------

.. automodule:: ufl.measureoperators
   :members:
   :undoc-members:
   :show-inheritance:

ufl.objects module
------------------

.. automodule:: ufl.objects
   :members:
   :undoc-members:
   :show-inheritance:

ufl.operators module
--------------------

.. automodule:: ufl.operators
   :members:
   :undoc-members:
   :show-inheritance:

ufl.permutation module
----------------------

.. automodule:: ufl.permutation
   :members:
   :undoc-members:
   :show-inheritance:

ufl.precedence module
---------------------

.. automodule:: ufl.precedence
   :members:
   :undoc-members:
   :show-inheritance:

ufl.protocols module
--------------------

.. automodule:: ufl.protocols
   :members:
   :undoc-members:
   :show-inheritance:

ufl.referencevalue module
-------------------------

.. automodule:: ufl.referencevalue
   :members:
   :undoc-members:
   :show-inheritance:

ufl.restriction module
----------------------

.. automodule:: ufl.restriction
   :members:
   :undoc-members:
   :show-inheritance:

ufl.sobolevspace module
-----------------------

.. automodule:: ufl.sobolevspace
   :members:
   :undoc-members:
   :show-inheritance:

ufl.sorting module
------------------

.. automodule:: ufl.sorting
   :members:
   :undoc-members:
   :show-inheritance:

ufl.split\_functions module
---------------------------

.. automodule:: ufl.split_functions
   :members:
   :undoc-members:
   :show-inheritance:

ufl.tensoralgebra module
------------------------

.. automodule:: ufl.tensoralgebra
   :members:
   :undoc-members:
   :show-inheritance:

ufl.tensors module
------------------

.. automodule:: ufl.tensors
   :members:
   :undoc-members:
   :show-inheritance:

ufl.variable module
-------------------

.. automodule:: ufl.variable
   :members:
   :undoc-members:
   :show-inheritance:

Module contents
---------------

.. automodule:: ufl
   :members:
   :undoc-members:
   :show-inheritance:
