ufl/2025.1.0/_sources/api-doc/ufl.rst.txt
ufl package
===========

Subpackages
-----------

.. toctree::
   :maxdepth: 4

   ufl.algorithms
   ufl.core
   ufl.corealg
   ufl.formatting
   ufl.utils

Submodules
----------

ufl.action module
-----------------

.. automodule:: ufl.action
   :members:
   :show-inheritance:
   :undoc-members:

ufl.adjoint module
------------------

.. automodule:: ufl.adjoint
   :members:
   :show-inheritance:
   :undoc-members:

ufl.algebra module
------------------

.. automodule:: ufl.algebra
   :members:
   :show-inheritance:
   :undoc-members:

ufl.argument module
-------------------

.. automodule:: ufl.argument
   :members:
   :show-inheritance:
   :undoc-members:

ufl.averaging module
--------------------

.. automodule:: ufl.averaging
   :members:
   :show-inheritance:
   :undoc-members:

ufl.cell module
---------------

.. automodule:: ufl.cell
   :members:
   :show-inheritance:
   :undoc-members:

ufl.checks module
-----------------

.. automodule:: ufl.checks
   :members:
   :show-inheritance:
   :undoc-members:

ufl.classes module
------------------

.. automodule:: ufl.classes
   :members:
   :show-inheritance:
   :undoc-members:

ufl.coefficient module
----------------------

.. automodule:: ufl.coefficient
   :members:
   :show-inheritance:
   :undoc-members:

ufl.compound\_expressions module
--------------------------------

.. automodule:: ufl.compound_expressions
   :members:
   :show-inheritance:
   :undoc-members:

ufl.conditional module
----------------------

.. automodule:: ufl.conditional
   :members:
   :show-inheritance:
   :undoc-members:

ufl.constant module
-------------------

.. automodule:: ufl.constant
   :members:
   :show-inheritance:
   :undoc-members:

ufl.constantvalue module
------------------------

.. automodule:: ufl.constantvalue
   :members:
   :show-inheritance:
   :undoc-members:

ufl.differentiation module
--------------------------

.. automodule:: ufl.differentiation
   :members:
   :show-inheritance:
   :undoc-members:

ufl.domain module
-----------------

.. automodule:: ufl.domain
   :members:
   :show-inheritance:
   :undoc-members:

ufl.duals module
----------------

.. automodule:: ufl.duals
   :members:
   :show-inheritance:
   :undoc-members:

ufl.equation module
-------------------

.. automodule:: ufl.equation
   :members:
   :show-inheritance:
   :undoc-members:

ufl.exprcontainers module
-------------------------

.. automodule:: ufl.exprcontainers
   :members:
   :show-inheritance:
   :undoc-members:

ufl.exprequals module
---------------------

.. automodule:: ufl.exprequals
   :members:
   :show-inheritance:
   :undoc-members:

ufl.exproperators module
------------------------

.. automodule:: ufl.exproperators
   :members:
   :show-inheritance:
   :undoc-members:

ufl.finiteelement module
------------------------

.. automodule:: ufl.finiteelement
   :members:
   :show-inheritance:
   :undoc-members:

ufl.form module
---------------

.. automodule:: ufl.form
   :members:
   :show-inheritance:
   :undoc-members:

ufl.formoperators module
------------------------

.. automodule:: ufl.formoperators
   :members:
   :show-inheritance:
   :undoc-members:

ufl.functionspace module
------------------------

.. automodule:: ufl.functionspace
   :members:
   :show-inheritance:
   :undoc-members:

ufl.geometry module
-------------------

.. automodule:: ufl.geometry
   :members:
   :show-inheritance:
   :undoc-members:

ufl.index\_combination\_utils module
------------------------------------

.. automodule:: ufl.index_combination_utils
   :members:
   :show-inheritance:
   :undoc-members:

ufl.indexed module
------------------

.. automodule:: ufl.indexed
   :members:
   :show-inheritance:
   :undoc-members:

ufl.indexsum module
-------------------

.. automodule:: ufl.indexsum
   :members:
   :show-inheritance:
   :undoc-members:

ufl.integral module
-------------------

.. automodule:: ufl.integral
   :members:
   :show-inheritance:
   :undoc-members:

ufl.mathfunctions module
------------------------

.. automodule:: ufl.mathfunctions
   :members:
   :show-inheritance:
   :undoc-members:

ufl.matrix module
-----------------

.. automodule:: ufl.matrix
   :members:
   :show-inheritance:
   :undoc-members:

ufl.measure module
------------------

.. automodule:: ufl.measure
   :members:
   :show-inheritance:
   :undoc-members:

ufl.objects module
------------------

.. automodule:: ufl.objects
   :members:
   :show-inheritance:
   :undoc-members:

ufl.operators module
--------------------

.. automodule:: ufl.operators
   :members:
   :show-inheritance:
   :undoc-members:

ufl.permutation module
----------------------

.. automodule:: ufl.permutation
   :members:
   :show-inheritance:
   :undoc-members:

ufl.precedence module
---------------------

.. automodule:: ufl.precedence
   :members:
   :show-inheritance:
   :undoc-members:

ufl.protocols module
--------------------

.. automodule:: ufl.protocols
   :members:
   :show-inheritance:
   :undoc-members:

ufl.pullback module
-------------------

.. automodule:: ufl.pullback
   :members:
   :show-inheritance:
   :undoc-members:

ufl.referencevalue module
-------------------------

.. automodule:: ufl.referencevalue
   :members:
   :show-inheritance:
   :undoc-members:

ufl.restriction module
----------------------

.. automodule:: ufl.restriction
   :members:
   :show-inheritance:
   :undoc-members:

ufl.sobolevspace module
-----------------------

.. automodule:: ufl.sobolevspace
   :members:
   :show-inheritance:
   :undoc-members:

ufl.sorting module
------------------

.. automodule:: ufl.sorting
   :members:
   :show-inheritance:
   :undoc-members:

ufl.split\_functions module
---------------------------

.. automodule:: ufl.split_functions
   :members:
   :show-inheritance:
   :undoc-members:

ufl.tensoralgebra module
------------------------

.. automodule:: ufl.tensoralgebra
   :members:
   :show-inheritance:
   :undoc-members:

ufl.tensors module
------------------

.. automodule:: ufl.tensors
   :members:
   :show-inheritance:
   :undoc-members:

ufl.variable module
-------------------

.. automodule:: ufl.variable
   :members:
   :show-inheritance:
   :undoc-members:

Module contents
---------------

.. automodule:: ufl
   :members:
   :show-inheritance:
   :undoc-members:
